--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-ErrorDocument 404 /error/404.php
-ErrorDocument 403 /error/403.php
-ErrorDocument 401 /error/401.php
+ErrorDocument 404 /error/404.html
+ErrorDocument 403 /error/403.html
+ErrorDocument 401 /error/401.html
 
 Options All -Indexes
